force-app/main/default/objects/vlocity_cmt__DocumentTemplateSectionCondition__c/vlocity_cmt__DocumentTemplateSectionCondition__c.object-meta.xml
<CustomObject>
    <description>Represents the condition that is applied to the document section for dynamic display in a generated contract document. Conditions can be simple product based conditions or those based on Vlocity Entity Filters</description>
    <label>Document Template Section Condition</label>
    <nameField>
        <label>Document Template Section Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Template Section Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>