force-app/main/default/objects/vlocity_cmt__DocumentTemplateSectionCondition__c/fields/vlocity_cmt__ApplicableItemType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ApplicableItemType__c</fullName>
    <description>If condition is based on a entity filter, it denotes the entity the filter is applied on</description>
    <label>ApplicableItemType</label>
    <length>60</length>
    <type>Text</type>
</CustomField>