force-app/main/default/objects/vlocity_cmt__DocumentTemplateSectionCondition__c/fields/vlocity_cmt__EntityFilterId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EntityFilterId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entity filter that defines the condition</description>
    <label>Vlocity Entity Filter</label>
    <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
    <relationshipLabel>Document Template Section Conditions</relationshipLabel>
    <relationshipName>Document_Template_Section_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>